# Front-AC

./: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
public/: output.css
public/css/: tailwind.css
src/: main.rs  model.rs
