[package]
name = "ac-pwa"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
wasm-logger = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
futures-util = "0.3"
gloo-file = { version = "0.3.0", features = ["futures"] }
web-sys = "0.3.69"   